--- a/05 - Flex Panel Gallery/style.css
+++ b/05 - Flex Panel Gallery/style.css
@@ -54,7 +54,8 @@ body, p {
   justify-content: center;
   font-size: 2em;
   text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
-  transition: transform 0.5s;
+  transition: transform 0.5s 0.6s;
+  user-select: none;
 }
 
 .up {
@@ -69,11 +70,14 @@ body, p {
   font-size: 4em;
 }
 
-.open-active>p {
+/* .open-active>p {
   transform: translateY(0);
-}
+} */
 
 .panel-actived {
   flex: 5;
   font-size: 40px;
+}
+.panel-actived>p {
+  transform: translateY(0);
 }
